# ml-demo

./: Image_recognition_pytorch.ipynb  README.md  pyproject.toml  student_perfomance.ipynb
descision_tree/: descision_tree.ipynb
linear_regression/: 1. linear_regression_intro.ipynb  model.ipynb
