[project]
name = "ml-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "nbconvert>=7.17.1",
    "numpy>=2.4.3",
    "pandas>=3.0.2",
    "pillow>=12.1.1",
    "scikit-learn>=1.8.0",
    "streamlit>=1.56.0",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
]
